fix travis-ci config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,2 @@
-language: python
-python: "2.7"
-sudo: false
-branches:
-     only:
-          - master
-before_script: ./build/scripts/setup_credentials.sh
-script: ./build/scripts/deploy.sh
+language: java
+script: ant -Dtest.level=RunLocalTests test
