--- a/src/package.xml
+++ b/src/package.xml
@@ -7,6 +7,7 @@
         <members>SO2TP_SettingsController</members>
         <members>SO2TP_StringUtil</members>
         <members>SO2TP_TestStringUtil</members>
+		<members>SO2TP_TweetProcessor</members>
         <members>SO2TP_TwitterUtil</members>
         <name>ApexClass</name>
     </types>
