--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
-<project name="so2twitter-poster-bot" default="test" basedir="." xmlns:sf="antlib:com.salesforce">
-    <taskdef uri="antlib:com.salesforce" resource="com/salesforce/antlib.xml" classpath="lib/ant-salesforce-36.jar"/>
-
+<project name="so2twitter-poster" default="test" basedir="." xmlns:sf="antlib:com.salesforce">
+    <taskdef uri="antlib:com.salesforce" resource="com/salesforce/antlib.xml" classpath="lib/ant-salesforce.jar"/>
+    
     <property environment="env"/>
     <property name="sf.username"      value="${env.SFDC_USERNAME}"/>
     <property name="sf.password"      value="${env.SFDC_PASSWORD}${env.SFDC_TOKEN}"/>
@@ -11,7 +11,7 @@
     <property name="check.only"       value="true"/>
     <property name="log.type"         value="None"/>
 
-    <target name="test">
+    <target name="deploy">
       <sf:deploy
           username       = "${sf.username}"
           password       = "${sf.password}"
